# blog

./: .gitignore
examples/p01/: Cargo.toml
examples/p01/benches/: bench_analysis.rs  fixture.rs
examples/p01/src/: lib.rs  main.rs
posts/: 00_init.md  01_different_flavors_of_dataframing.md
resources/: surprise.file
